Benefit layout breaking bug fixed

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -122,6 +122,7 @@
 
     @include media(lg) {
       padding: 20px 40px 40px;
+      font-size: 0;
     }
 
     &::after {
@@ -145,8 +146,10 @@
     */
     @include media(lg) {
       width: calc(100% / 3 - 20px);
-      float: left;
+      display: inline-block;
       margin-top: 20px;
+      vertical-align: top;
+      font-size: initial;
 
       &:nth-child(3n+2) {
         margin-right: 30px;
